--- a/portal2/index.html
+++ b/portal2/index.html
@@ -1,8 +1,9 @@
 <!--
-Creative Commons License
-Portal End Credits Web by TylaKitty/xBytez/Valve is licensed under a Creative Commons Attribution-ShareAlike 4.0 International License.
-Based on a work at http://xbytez.eu/.
--->
+ - Creative Commons License
+ - Portal 2 End Credits Web by TylaKitty, xBytez, MatheusAvellar & Valve is licensed under a Creative Commons Attribution-ShareAlike 4.0 International License.
+ - Based on a work at http://xbytez.eu/.
+ -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
